RESOLVED FIXED30345
HTTP tests for credential handling fail on Tiger
https://bugs.webkit.org/show_bug.cgi?id=30345
Summary HTTP tests for credential handling fail on Tiger
Alexey Proskuryakov
Reported 2009-10-13 15:25:39 PDT
Patch forthcoming.
Attachments
proposed fix (4.64 KB, patch)
2009-10-13 15:29 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2009-10-13 15:29:39 PDT
Created attachment 41133 [details] proposed fix
Brady Eidson
Comment 2 2009-10-13 15:56:54 PDT
Comment on attachment 41133 [details] proposed fix *sigh*
Alexey Proskuryakov
Comment 3 2009-10-13 16:37:43 PDT
Committed revision 49525.
Note You need to log in before you can comment on or make changes to this bug.