        Reviewed by Brady Eidson.

https://bugs.webkit.org/show_bug.cgi?id=30345
        HTTP tests for credential handling fail on Tiger

        We cannot prevent NSURLConnection from doing its credentil handling on Tiger anyway; so
        let it do its work without intervention. Once again, we pass explicitly passed credentials
        in URL, fixing regressions from Safari 3.

        * platform/network/mac/ResourceHandleMac.mm:
        (WebCore::ResourceHandle::start):
        (WebCore::ResourceHandle::didReceiveAuthenticationChallenge):
        (WebCore::ResourceHandle::receivedCredential):



Canonical link: https://commits.webkit.org/41011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49525 268f45cc-cd09-0410-ab3c-d52691b4dbfc